--- a/HTML/Special events.html
+++ b/HTML/Special events.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>SE Test</title>
-	<link rel="stylesheet" href="../CSS/main.min.css">
+	<link rel="stylesheet" href="../CSS/min/main.min.css">
 </head>
 <body>
 
@@ -28,16 +28,62 @@
 			</div>
 		</div>
 		<div class="pattern-overlay z-1">
-			<img alt="" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/282e6134455b40389bc2e0c3aaec4030.png" width="739" height="441" />
+			<img alt="" class="static-pattern pos-top pos-right-neg-70" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/282e6134455b40389bc2e0c3aaec4030.png" width="739" height="441" />
 		</div>
 	</section>
 
-	<section class="no-padding background-orange">
-		<div class="row h-center z-1">
-			<div class="col text-center lg-8">
-				<p class="text-normal h5">Sign-up for Education courses when registering for MicroStrategy World 2019. In the event you are already registered for World and would like to sign up for Education courses now, please <a href="https://www.cvent.com/Events/Register/RegNumConfirmation.aspx?e=2c0e1774-16a0-487b-95c8-2069ccaa35ce" class="cta-button red carat small">modify your registration</a>
-					<br>If you need assistance please contact <a href="mailto:microstrategyworld@microstrategy.com" class="text-red">MicroStrategy World</a></p>
+
+	<section id="meetings" class="background-green section-stacked-bars">
+		<div class="row h-left z-2">
+			<div class="col md-10 lg-9 xl-8">
+				<div class="bullet-group large">
+					<h2 class="h3 text-uppercase text-bold">Meetings</h2>
+					<p class="h4">Thousands of analytics experts from around the world. 3 days. 1 focus– helping you put your data to
+						work like never before. Get ready for the year's most anticipated analytics and mobility&nbsp;event.</p>
+					<a class="cta-button navy small carat" href="https://microstrategy.jifflenow.com/microstrategyworld2019/external_request/c8b915"
+						target="_blank">Schedule Your Meeting Now</a>
+				</div>
 			</div>
+		</div>
+
+		<div class="row between margin-top-30 z-2">
+			<div class="col md-9">
+				<div class="bullet-group">
+					<h5 class="text-uppercase text-bold">1:1 MicroStrategy 2019 Consultation</h5>
+					<p>Excited about MicroStrategy 2019, but weary of the process to upgrade? Meet our upgrade experts to maximize
+						your MicroStrategy 2019 experience. Learn more about how your organization can take advantage of the powerful
+						new functionalities available since the last platform release, including HyperIntelligence, the enterprise
+						semantic graph, dossiers, library and much more.</p>
+					<p>In addition to getting tips on how to prepare for a seamless upgrade process, the MicroStrategy expert will
+						also talk about new features like testing automation in the platform that help you upgrade. We’ll also discuss
+						how you can schedule a complimentary one-week Upgrade Advisory--where we send an expert to your location to help
+						conduct sandbox upgrading testing, build and deploy a HyperIntelligence pilot, and provide a detailed feature
+						value map and clear recommendations for a smooth upgrade.</p>
+				</div>
+			</div>
+			<div class="col md-6">
+				<div class="bullet-group">
+					<h5 class="text-uppercase text-bold">Solution Talks at World 2019</h5>
+					<p>New to World this year, Solution Talks provide conference attendees with a great opportunity to meet
+						one-on-one with one of our executives to learn how numerous departments in MicroStrategy use our platform. Have
+						an interactive discussion, collaborate over strategies to apply a data-driven approach to your department, and
+						get detailed answers to any questions you may have.</p>
+					<a href="https://www.microstrategy.com/us/go/world/solution-talks-at-world-2019" class="cta-button navy carat">Learn More</a>
+				</div>
+			</div>
+			<div class="col md-6">
+				<div class="bullet-group">
+					<h5 class="text-uppercase text-bold">Tech Talks at World 2019</h5>
+					<p>TechTalks provide conference attendees with an opportunity to meet with one of our technical experts to deep
+						dive on a variety of topics related to leveraging the MicroStrategy platform. Join our experts for an in-depth
+						conversation about the semantic graph, HyperIntelligence, migrating to the cloud, and much more.</p>
+					<a href="https://www.microstrategy.com/us/go/world/tech-talks-at-world-2019" class="cta-button navy carat">Learn More</a>
+				</div>
+
+			</div>
+		</div>
+		<div class="pattern-overlay z-1">
+			<img alt="" class="static-pattern pos-top-right" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8370cb2dd5a64a5ab926912df07df23b.png" />
 		</div>
 	</section>
 
@@ -46,9 +92,10 @@
 			<div id="education" class="col md-6">
 					<div class="header-box education bullet-group">
 						<h3 class="h2 text-medium text-normal">Building a More Intelligent Enterprise: Best Practices for the Intelligence Director</h3>
+						<div class="special-event-box text-label blue margin-top-10">Session Full</div>
 						<div class="special-event-box text-label red margin-top-10">Education event</div>
-						<p>To navigate and thrive in an increasingly complex BI datascape, forward-leaning companies are racing to transform into Intelligent Enterprises—capable of using data, people, and assets in aggregated and unique ways. In this class, you’ll evaluate where your organization stands today, understand how to establish a foundation for growth, and learn how to drive business intelligence adoption within your enterprise. This class will cover topics like data governance, process and change management, enterprise mobility, how to build your team, and how to empower users.</p>
-						<p>This course is ideal for those running a BI group&mdash;directors, VPs, and executives looking to establish a foundation for growing a successful enterprise with the MicroStrategy platform. Learn what a fully scalable Intelligent Enterprise can do when it’s aligned with corporate standards and staffed with experts using best practices in their daily work. Transform your BI and become a change advocate for intelligent, competitive analytics in your organization.</p>
+
+						<p>This course is ideal for those running a BI group—directors, VPs, and executives looking to establish a foundation for growing a successful enterprise with the MicroStrategy platform. Learn what a fully scalable Intelligent Enterprise can do when it’s aligned with corporate standards and staffed with experts using best practices in their daily work. Transform your BI and become a change advocate for intelligent, competitive analytics in your organization.</p>
 
 						<div class="row collapse">
 							<div class="col lg-6">
@@ -60,29 +107,22 @@
 							<div class="col lg-6">
 								<div class="triangle-group red margin-top-10">
 									<p><strong>Thursday, February 7</strong><br>
-									7:30am - 12:00pm <br> 12:30pm - 4:30pm</p>
+									7:30am - 12:00pm <br> 12:30pm - 5:00pm</p>
 								</div>
 							</div>
 						</div>
 
-						<a class="cta-button small red carat margin-top-10 reg-link" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
+						<!-- <a class="cta-button small red carat margin-top-10 reg-link" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a> -->
+						<a class="cta-button small red carat margin-top-10" href="mailto:microstrategyworld@microstrategy.com?subject=Waitlisting%20for%20Building%20a%20More%20Intelligent%20Enterprise&body=Please%20specify%20the%20session%20day%20and%20time%20you%20would%20like%20to%20join.">Join the Waitlist</a>
 					</div>
 			</div>
 
 			<div id="education" class="col md-6 z-1">
 				<div class="header-box education bullet-group">
 					<h3 class="h2 text-medium text-normal">Comprehensive Overview and Hands-On Experience With MicroStrategy 2019</h3>
+					<div class="special-event-box text-label blue margin-top-10">Session Full</div>
 					<div class="special-event-box text-label red margin-top-10">Education event</div>
-					<p>MicroStrategy 2019 is the world’s first and only platform for federated analytics, transformation mobility, and HyperIntelligence. It is the most open and complete offering on the market—delivering modern analytics on an enterprise platform that can be deployed on multiple private or public cloud platforms —designed to help make every enterprise a more Intelligent Enterprise. This course is ideal for analysts, business users, developers, data scientists, architects, or administrators seeking a comprehensive overview of the amazing new capabilities in MicroStrategy 2019. Topics include:
-						<ul>
-							<li><span class='text-bold'>Modern Analytics:</span> Highlights include the modern MicroStrategy Dossier and Library experience, natural language capabilities, geospatial analytics and interactive collaboration options.</li>
-							<li><span class='text-bold'>Open Architecture:</span> Highlights include MicroStrategy on AWS, MicroStrategy on Azure, and deep dive into REST APIs to build and deploy custom applications.</li>
-							<li><span class='text-bold'>Enterprise Platform:</span> Highlights include MicroStrategy Workstation and Platform Analytics to monitor application usage in real-time, manager user security, build and tune applications for high performance and scale.</li>
-							<li><span class='text-bold'>Federated Analytics:</span> Highlights include an overview of the Enterprise Semantic Graph, a common business glossary and metadata index for enterprise assets and how to leverage MicroStrategy for trusted analytics with Tableau, Qlik, PowerBI, R Studio and Jupyter Notebook.</li>
-							<li><span class='text-bold'>Transformational Mobility:</span> Highlights include mobile dossiers, no-code drag-and-drop and customized development with SDKs.</li>
-							<li><span class='text-bold'>HyperIntelligence:</span> Highlights include HyperCards, integration with Alexa, Chatbots and other augmented reality apps that enable HyperIntelligence, a new category of analytics that imbues every word, object, place, room, and wall with zero-click personalized Intelligence.</li>
-						</ul>
-						</p>
+					<p>MicroStrategy 2019 is the world’s first and only platform for federated analytics, transformation mobility, and HyperIntelligence. It is the most open and complete offering on the market—delivering modern analytics on an enterprise platform that can be deployed on multiple private or public cloud platforms —designed to help make every enterprise a more Intelligent Enterprise. This course is ideal for analysts, business users, developers, data scientists, architects, or administrators seeking a comprehensive overview of the amazing new capabilities in MicroStrategy 2019.</p>
 
 						<div class="row collapse">
 							<div class="col lg-6">
@@ -94,11 +134,12 @@
 							<div class="col lg-6">
 								<div class="triangle-group red margin-top-10">
 									<p><strong>Thursday, February 7</strong><br>
-										7:30am - 12:00pm <br> 12:30pm - 4:30pm</p>
+										7:30am - 12:00pm <br> 12:30pm - 5:00pm</p>
 								</div>
 							</div>
 						</div>
-						<a class="cta-button small red carat margin-top-10 reg-link" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a>
+						<!-- <a class="cta-button small red carat margin-top-10 reg-link" href="http://events.microstrategy.com/events/microstrategy-world-2019/registration-2c0e177416a0487b95c82069ccaa35ce.aspx?p=22">Register Today</a> -->
+						<a class="cta-button small red carat margin-top-10" href="mailto:microstrategyworld@microstrategy.com?subject=Waitlisting%20for%20Comprehensive%20Overview%20and%20Hands-On%20Experience%20With%20MicroStrategy%202019&body=Please%20specify%20the%20session%20day%20and%20time%20you%20would%20like%20to%20join.">Join the Waitlist</a>
 				</div>
 			</div>
 		</div>
@@ -107,8 +148,14 @@
 					<p><small class="text-normal">* To ensure a more personalized learning experience, attendees will be divided into smaller learning groups. Approximately one week prior to World 2019, you will receive an email confirmation with your assigned classroom location. Please plan on arriving 30 minutes prior to your start time and bring your own laptop.</small></p>
 			</div>
 		</div>
+
+		<div class="row h-center z-1">
+			<div class="col text-center lg-8">
+				<p class="text-normal h5">Education sessions are currently full. If you have registered for World 2019 and would like to <span class="text-red">join the waitlist</span>, we will let you know when space is available.</p>
+			</div>
+		</div>
 		<div class="pattern-overlay z-0">
-			<img alt="" class="static-pattern pos-bottom-left" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/50c652327b2f486982cfbf0fa1c2d23d.png" width="400" height="391" />
+			<img alt="" class="static-pattern pos-bottom-neg-100 pos-left-neg-90" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/50c652327b2f486982cfbf0fa1c2d23d.png" width="400" height="391" />
 		</div>
 	</section>
 
@@ -134,7 +181,7 @@
 				<div class="col md-4">
 					<div class="special-event-box">
 						<div class="header-box womens-networking bullet-group">
-							<h3 class="h2 text-medium text-normal">Women's Networking Event</h3>
+							<h3 class="h2 text-medium text-normal">Women in Technology Panel & Networking</h3>
 							<div class="text-label orange margin-top-10">Networking Event</div>
 
 							<p>Mingle with women in leadership throughout the world of analytics. You’ll have the chance to meet fellow MicroStrategy customers, partners, and employees&mdash;and celebrate at a networking cocktail reception.</p>
@@ -185,11 +232,11 @@
 				</div>
 			</div>
 			<div class="pattern-overlay z-0">
-				<img alt="" class="static-pattern pos-bottom" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c5c9895ba9e44fa4a033c85536aca668.png" width="400" height="391" />
+				<img alt="" class="static-pattern pos-bottom-neg-100 pos-left-neg-100" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c5c9895ba9e44fa4a033c85536aca668.png" width="400" height="391" />
 			</div>
 		</section>
 
-		<section class="background-green section-stacked-bars">
+		<section class="background-navy section-square-dots">
 			<div class="row h-left z-1">
 
 				<div id="Dossier" class="col md-6">
@@ -201,7 +248,7 @@
 							<div class="triangle-group navy margin-top-10">
 								<p><strong>February 4 &ndash; 6</strong></p>
 							</div>
-							<a href="https://www.microstrategy.com/us/go/world-2019-dossier-contest" class="cta-button navy carat small margin-top-10">Submit a Proposal</a>
+							<a href="https://www.microstrategy.com/us/go/world-2019-dossier-contest" class="cta-button orange carat small margin-top-10">Submit a Proposal</a>
 						</div>
 					</div>
 				</div>
@@ -252,7 +299,7 @@
 										</div>
 									</div>
 								</div>
-							<a href="https://www.microstrategy.com/us/go/world-2019-datathon" class="cta-button navy carat small margin-top-10">Submit Application</a>
+							<a href="https://www.microstrategy.com/us/go/world-2019-datathon" class="cta-button orange carat small margin-top-10">Submit Application</a>
 						</div>
 					</div>
 				</div>
