--- a/HTML/Venue.html
+++ b/HTML/Venue.html
@@ -213,14 +213,19 @@
 				</div>
 			</div>
 			<div class="row h-center">
-				<div class="col md-5">
-					<p class="h4">Make the most of your time in Arizona and enhance your stay with one of the great day trips offered by Detours American West</a>.</p>
+				<div class="col md-4">
+					<p>Make the most of your time in Arizona and enhance your stay with one of the great day trips offered by Detours American West</a>.</p>
 					<p><a href="http://www.detoursamericanwest.com/" class="cta-button small green ">Book Your Detour</a></p>
 					<p class="small text-bold">If you book your trip with Detours, make sure to state that you are a MicroStrategy World attendee to receive best prices.</p>
 				</div>
-				<div class="col md-5">
-					<p class="h4">To guarantee comfortable travel throughout Phoenix book your ride at discounted MicroStrategy World fares from SuperShuttle Phoenix.
+				<div class="col md-4">
+					<p>To guarantee comfortable travel throughout Phoenix book your ride at discounted MicroStrategy World fares from SuperShuttle Phoenix.
 					<br><a href="https://group.supershuttle.com/group-page/microstrategy-world-2019/" class="cta-button small green">Book Your Ride</a></p>
+				</div>
+				<div class="col md-4">
+					<p>MicroStrategy is proud to partner with <a class="text-green text-bold" href="https://www.lyft.com/">Lyft</a> on ground transportation this year at World 2019. Lyft will be offering our attendees a 10% discount on two of their rides. To take advantage of this promotion, please use our code, <span class="text-bold">MSTR19</span> once you arrive in Phoenix.</p>
+
+					<p>Don’t have Lyft? Not a problem, download the app in your google play store or apple store by searching “Lyft”. You can also receive a text with the link for direct download by visiting their <a class="text-green text-bold"  href="https://www.lyft.com/rider">website</a>. Once you have signed up for an account, you can add the promo code under the “Promo” section on the left side menu.</p>
 				</div>
 			</div>
 			<div class="row expand collapse photo-row short">
