--- a/HTML/concierge.html
+++ b/HTML/concierge.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Concierge</title>
-    <link rel="stylesheet" href="../CSS/min/main.css">
+    <link rel="stylesheet" href="../CSS/min/main.min.css">
 </head>
 <body>
     <div id='concierge'>
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="pattern-overlay z-1">
-                <img alt="" class="static-pattern pos-top" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/282e6134455b40389bc2e0c3aaec4030.png" width="739" height="441" />
+                <img alt="" class="static-pattern pos-top pos-right-neg-70" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/282e6134455b40389bc2e0c3aaec4030.png" width="739" height="441" />
             </div>
         </section>
         <section class="weather no-padding">
@@ -50,19 +50,26 @@
                         </li>
                         <br>
 
-                        <li>Or at the Renaissance Phoenix Downtown Hotel<br>
+                        <li>Hampton Inn & Suites Phoenix Downtown<br>
                             <p class="text-small">Don't forget to mention you're attending MicroStrategy World 2019</p>
-                            <a class="cta-button blue small" href="https://book.passkey.com/go/MicroStrategyWorld2019" target="_blank">Book Your Room</a>
+                            <a class="cta-button blue small" href="https://na01.safelinks.protection.outlook.com/?url=https%3A%2F%2Fsecure3.hilton.com%2Fen_US%2Fhp%2Freservation%2Fbook.htm%3FinputModule%3DHOTEL%26ctyhocn%3DPHXCTHX%26spec_plan%3DCHHMSW%26arrival%3D20190131%26departure%3D20190208%26cid%3DOM%2CWW%2CHILTONLINK%2CEN%2CDirectLink%26fromId%3DHILTONLINKDIRECT&data=02%7C01%7CJeffrey.Demenna%40hilton.com%7Cab15d355ee224d11c19d08d67b2d7918%7C660292d2cfd54a3db7a7e8f7ee458a0a%7C0%7C0%7C636831832569319216&sdata=O%2BZ1OQqw9HpkEQB29slZnjHDfmy%2Fsw6CoouC%2F7f5px8%3D&reserved=0" target="_blank">Book Your Room</a>
+                        </li>
+                        <br>
+
+                        <li>Residence Inn Phoenix Downtown<br>
+                            <p class="text-small">Don't forget to mention you're attending MicroStrategy World 2019</p>
+                            <a class="cta-button blue small" href="https://www.marriott.com/hotels/travel/phxtw-residence-inn-phoenix-downtown/" target="_blank">Book Your Room</a>
+                        </li>
+                        <br>
+
+                        <li>Hilton Garden Inn Phoenix Downtown<br>
+                            <p class="text-small">Don't forget to mention you're attending MicroStrategy World 2019</p>
+                            <a class="cta-button blue small" href="http://hiltongardeninn.hilton.com/en/gi/groups/personalized/P/PHXDOGI-MICRO-20190131/index.jhtml" target="_blank">Book Your Room</a>
                         </li>
                         <br>
 
                         <li>Book your flights to Phoenix before rates go up! <br>
                         <a class="cta-button blue small" href="https://www.google.com/flights?q=flights&client=firefox-b-1-ab&biw=1440&bih=803&source=lnms&impression_in_search=true&mode_promoted=true&tbm=flm&sa=X&ved=0ahUKEwiqq9CztpjfAhUNx1kKHQ_OBTEQ_AUIDigB#flt=/m/0rh6k./m/0d35y.2019-02-03*/m/0d35y./m/0rh6k.2019-02-07;c:USD;e:1;sd:1;t:f" target="_blank">Make Your Travel Plans</a> </li>
-                        <br>
-
-                        <li>Seize the opportunity to become a MicroStrategy expert<br>
-                            <a class="cta-button red small expand" href="https://www.cvent.com/Events/Register/RegNumConfirmation.aspx?e=2c0e1774-16a0-487b-95c8-2069ccaa35ce" target="_blank">Register for Free Classes at&nbsp;World</a>
-                        </li>
                         <br>
 
                         <li>Interested in competing against world-class teams for the best data idea? <br>
@@ -110,6 +117,9 @@
                             <h3 class="text-normal h4">Women in Technology Networking Event</h3>
                             <p class="text-bold text-uppercase text-small text-dark-gray">Tuesday, February 5th 4:00PM</p>
                             <p>Meet inspiring female technology leaders, share ideas, and mingle with other industry professionals.</p>
+                            <p>Event is sponsored by: <br> <a href="http://www.exasol.com/en" target="_blank" class="sponsor-logo">
+                                <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/00d35b41c63b44668872863097b1caea.png" alt="Exasol logo">
+                            </a></p>
                         </div>
                     </div>
 
@@ -123,6 +133,9 @@
                             <p class="text-bold text-uppercase text-small text-dark-gray">Tuesday, February 5th 6:30AM</p>
                             <p>Be sure to pack your workout gear so you can join the Fitness Bootcamp in support for STEM for Her, a DC-based nonprofit advocating for women in technology.</p>
                             <a class="cta-button red small" href="https://stemforher.networkforgood.com/projects/66903-microstrategy-fitness-bootcamp">Learn More</a>
+                            <p>Event is sponsored by: <br> <a href="https://www.datastrong.com/" target="_blank" class="sponsor-logo">
+                                <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0da97e8abfa1420083451ff54b23383d.png" alt="Datastrong logo">
+                            </a></p>
                         </div>
                     </div>
 
