updated content and new section

--- a/HTML/live-page.html
+++ b/HTML/live-page.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/main.min.css">
+    <link rel="stylesheet" href="../CSS/min/main.min.css">
 </head>
 <body>
         <div id="live-page">
@@ -36,7 +36,7 @@
 
                 <section class="background-black no-padding" id="live-info">
                     <div class="row h-center padding-top-50 padding-bottom-30">
-                        <div class="col md-10 lg-8">
+                        <div class="col md-6">
                             <iframe id="ls_embed_1547490185" src="https://livestream.com/accounts/860658/events/8526166/player?width=960&height=540&enableInfoAndActivity=true&defaultDrawer=feed&autoPlay=true&mute=false" width="960" height="540" frameborder="0" scrolling="no" allowfullscreen> </iframe>
                             <script type="text/javascript" data-embed_id="ls_embed_1547490185" src="https://livestream.com/assets/plugins/referrer_tracking.js"></script>
                             <h3 class="h2 text-large"></h3>
@@ -47,16 +47,26 @@
                     <div class="row h-left">
                         <div class="col md-10 lg-8">
                             <h3 class="text-uppercase text-normal marginup5 triangle-group red">Today's Schedule</h3>
-                            <p>For a more detailed schedule, visit the <a href="/events/microstrategy-world-2018/agenda-aa6691472ae24aa5acce0f807c591429.aspx">agenda page</a> or download the World app from the links below.</p>
-                            <a target="_blank" class="social-badge" href="https://itunes.apple.com/us/app/microstrategy-world-for-ipad/id888525116?mt=8">
-                                <img alt="" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0fdd21fa2ff049d7bb962825a5be6395.png" width="564" height="168" />
-                            </a>
+                            <p>For a more detailed schedule, visit the <a href="#">agenda page</a> or download the World app from the links below.</p>
+                            <div class="row">
+                                <div class="col">
+                                    <p class="text-label">Get it for iPhone:</p>
+                                    <p class="text-label">Get it for iPhone:</p>
+
+                                </div>
+                                <a target="_blank" class="social-badge" href="https://itunes.apple.com/us/app/microstrategy-world-for-iphone/id888698281">
+                                    <img alt="" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/44d091e4c269494c9326e51c9a1e6622.png" width="564" height="168" />
+                                </a>
+                                <a target="_blank" class="social-badge" href="https://itunes.apple.com/us/app/microstrategy-world-for-iphone/id888698281">
+                                    <img alt="" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/44d091e4c269494c9326e51c9a1e6622.png" width="564" height="168" />
+                                </a>
+                            </div>
                             <a target="_blank" class="social-badge" href="https://play.google.com/store/apps/details?id=com.microstrategy.android.world&amp;hl=en">
                                 <img alt="" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/a13affd4c853472abd297b6504be203d.png" width="564" height="168" />
                             </a>
                         </div>
                         <div class="col sm-12">
-                            {[E-CUSTOM TAG:DAILY-SCHEDULE_WEDNESDAY]}
+                            Daily Schedule Block to go here.
                         </div>
                     </div>
                 </section>
