updated sponsor content

--- a/HTML/sponsors.html
+++ b/HTML/sponsors.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/main.min.css">
+    <link rel="stylesheet" href="../CSS/min/main.min.css">
 </head>
 <body>
 
@@ -307,6 +307,20 @@
             <div class="col md-7 lg-6">
                 <h6 class="text-uppercase text-bold">Invexer</h6>
                 <p>Invexer is a professional services and product company that delivers best value BI services and solutions for a variety of industries using MicroStrategy platform. We have exceptionally deep expertise in developing plugins, custom BI applications, widgets and visualizations using MicroStrategy SDK. Please stop by our booth to check out our PDF export plugin.</p>
+            </div>
+            <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
+        </div>
+
+        <div class="row h-left">
+            <div class="col lg-3 md-4">
+                <a href="https://www.kyvosinsights.com/" target="_blank" class="ratio sixteen-nine">
+                    <img class="logo" src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/5881fd3cd61448718b66a7ee21643e10.png"
+                        alt="Kyvos Insights logo">
+                </a>
+            </div>
+            <div class="col md-7 lg-6">
+                <h6 class="text-uppercase text-bold">Kyvos</h6>
+                <p>Kyvos is a disruptive, enterprise-class, Big Data solution that works seamlessly with MicroStrategy to deliver interactive BI at massive scale. Our breakthrough OLAP on Big Data technology enables MicroStrategy users to query billions of rows of data on Hadoop or cloud based platforms with instant response times and unlimited scalability.</p>
             </div>
             <!--<div class="col md-5 lg-3">Additional Info for booth</div>-->
         </div>
