--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -55,6 +55,9 @@
                             </div>
 
                         </div>
+                        <div class="row h-left">
+                                <p class="text-red padding-bottom-20">Time is running out! Register now to save your spot. Take advantage of our final discount code <span class="text-bold">LastChance19</span> by February 1st to save $300 on your registration.</p>
+                        </div>
                         <div class="cta-home-group">
                             <a class="cta-button large red carat reg-link" href="{[E-RSVP YES URL]}">Register now</a>
                         </div>
@@ -125,9 +128,9 @@
                                 </div>
                             </div>
                             <div class="col md-4">
-                                <p class="text-label">Coming Soon for Android</p>
+                                <p class="text-label">Get it for Android</p>
                                 <div>
-                                    <a href="#"><img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/81c4d46a20e146c6b4ae473c53549730.png" alt="Google Play Store Badge" class="google badge"/></a>
+                                    <a href="https://play.google.com/store/apps/details?id=com.microstrategy.android.world&hl=en_US"><img src="https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/81c4d46a20e146c6b4ae473c53549730.png" alt="Google Play Store Badge" class="google badge"/></a>
                                 </div>
                             </div>
 
@@ -573,9 +576,11 @@
                         <div class="photo one-on-one"></div>
                     </div>
                     <div class="col lg-4 background-white shadow">
-                                <h3 class="text-normal h4">1:1 MicroStrategy 2019 Consultation, Tech Talks & Solution Talks</h3>
-                                <p>Now that you’re registered for World, it’s time to start thinking about how to maximize your time in Phoenix. Book your 1:1 MicroStrategy v2019 upgrade consultation, Tech Talk or Solution Talk and meet with a MicroStrategy consultant who will provide feedback to help you accomplish your digital transformation goals faster.</p>
-                                <a href="https://microstrategy.jifflenow.com/microstrategyworld2019/external_request/c8b915?mkt_tok=eyJpIjoiT1RWbE9XVTBOVGM1TUdZNCIsInQiOiJvQno0YUFoWklWZjZ1eVBnUFdta25tNmREMVRGWG42TGZDWHhqMWJkbFVBQ2NjVjJGNFVJVFB5R1FhZENmOEowOEZuRldpU1NkR3VGWWN1WE1hclwvcEE9PSJ9" class="cta-button blue carat">Schedule your meeting today</a>
+                                <h3 class="text-normal h4">Upgrade Consultations, Tech Talks & Solution Talks</h3>
+                                <p>Now that you’re registered for World, it’s time to start thinking about how to maximize your time in Phoenix. Book your Upgrade Consultation  to maximize your MicroStrategy 2019 experience. Reserve a Tech Talk to get expert feedback and accomplish your digital transformation goals faster. Meet with one of our executives  at a Solution Talk and learn how they utilize the MicroStrategy platform to enhance their day to day operations.</p>
+                                <a class= "cta-button navy small carat" href="https://www.microstrategy.com/us/go/world/tech-talks-at-world-2019">Learn More about Tech Talks</a>
+                                <a class="cta-button red small carat"  href="https://www.microstrategy.com/us/go/world/solution-talks-at-world-2019">Learn More about Solution Talks</a>
+                                <a href="https://microstrategy.jifflenow.com/microstrategyworld2019/external_request/c8b915?mkt_tok=eyJpIjoiT1RWbE9XVTBOVGM1TUdZNCIsInQiOiJvQno0YUFoWklWZjZ1eVBnUFdta25tNmREMVRGWG42TGZDWHhqMWJkbFVBQ2NjVjJGNFVJVFB5R1FhZENmOEowOEZuRldpU1NkR3VGWWN1WE1hclwvcEE9PSJ9" class="cta-button blue carat">Register Today</a>
                     </div>
                 </div>
 
@@ -625,12 +630,21 @@
 
                     <div class="col md-12 lg-4">
                         <div class="bullet-group large">
+                            <h5 class=" text-uppercase text-bold">Dossier Contest Deadline</h5>
+                            <p>MicroStrategy introduced you to dossier. Now it’s your turn to introduce us to your dossier business solution. Enter the World 2019 Dossier Contest where the winner will receive an iPhone Xs! Submit your entry by January 31st.</p>
+                            <a href="https://www.microstrategy.com/us/go/world-2019-dossier-contest"
+                                class="cta-button blue small carat">Learn More & Sign Up</a>
+                        </div>
+                    </div>
+
+                    <!-- <div class="col md-12 lg-4">
+                        <div class="bullet-group large">
                             <h5 class=" text-uppercase text-bold">Come Experience Phoenix</h5>
                             <p>Join us in downtown Phoenix for this year's conference. The event begins February 4th at the Phoenix Convention Center. We have accommodations and other activites to enjoy before, during and after the conference.</p>
                             <a href="http://events.microstrategy.com/events/microstrategy-world-2019/custom-21-2c0e177416a0487b95c82069ccaa35ce.aspx?p=17"
                                 class="cta-button blue small carat">Learn More</a>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
 
@@ -770,6 +784,10 @@
                                 Conference Registration
                             </div>
                             <div class="time-block">
+                                <div class="time-label">9:00am – 6:00pm</div>
+                                Datathon
+                            </div>
+                            <div class="time-block">
                                 <div class="time-label">11:00am – 4:00pm</div>
                                 Pre-Event Education Courses
                             </div>
@@ -779,12 +797,13 @@
                             </div>
                             <div class="time-block">
                                 <div class="time-label">4:00pm - 6:00pm</div>
-                                OEM Partner Events
+                                OEM Forum
                             </div>
                             <div class="time-block">
                                 <div class="time-label">5:30pm – 7:30pm</div>
                                 Welcome Reception
                             </div>
+
                         </div>
                     </div>
                     <div class="time-block-wrapper col md-6 lg-8">
@@ -816,12 +835,12 @@
                                         <div class="time-label">9:00am – 11:00am</div>
                                         General Session
                                     </div>
-																	</div>
-																	<div class="col lg-6">
-																		<div class="time-block">
-																				<div class="time-label">11:30am - 12:15pm</div>
-																				Sessions &amp; Workshops
-																		</div>
+                                </div>
+                                <div class="col lg-6">
+                                    <div class="time-block">
+                                            <div class="time-label">11:30am - 12:15pm</div>
+                                            Sessions &amp; Workshops
+                                    </div>
                                     <div class="time-block">
                                         <div class="time-label">12:00pm – 2:00pm</div>
                                         Conference Lunch
@@ -858,10 +877,6 @@
                                     <div class="time-block">
                                         <div class="time-label">9:00am – 9:45am</div>
                                         Sessions &amp; Workshops
-                                    </div>
-                                    <div class="time-block">
-                                        <div class="time-label">9:00am – 6:00pm</div>
-                                        Datathon
                                     </div>
                                 </div>
                                 <div class="col lg-6">
@@ -1351,7 +1366,6 @@
             .google.badge {
                 width: 58%;
                 margin-left: -10px;
-                opacity: .0;
             }
 
             .info-box img {
